--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline with Docker
+name: CI/CD Pipeline with Docker and Tests
 
 on:
   push:
@@ -13,8 +13,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: |
+          npm install -g pnpm
+          pnpm install
+
+      - name: Run tests
+        run: pnpm test
+
       - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker.io
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
@@ -31,4 +46,9 @@ jobs:
           DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
           SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         run: |
-          sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $DEPLOY_USER@$DEPLOY_SERVER 'docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-task:latest && docker-compose up -d'
+          sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $DEPLOY_USER@$DEPLOY_SERVER '
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-task:latest &&
+            docker stop balancee-task || true &&
+            docker rm balancee-task || true &&
+            docker run -d --name balancee-task -p 3000:3000 ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-task:latest
+          '
