--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
     "scripts": {
     "start": "node app.js",
-    "test": "mocha tests/*.test.js"
+    "test": "mocha tests/*.test.js --timeout 5000"
   },
   "keywords": [],
   "author": "",
