Update CI/CD pipeline

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,27 @@
-version: '3'
+name: balancee-task
 services:
-  balancee-app:
+  app:
+    image: ${COMPOSE_PROJECT_NAME}:latest
     build: .
+    healthcheck:
+      test: "curl -fs http://localhost:3000"
+      interval: 3s
+      retries: 3
+      timeout: 5s
+  nginx:
+    image: nginx:latest
     ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=production
-    restart: always
+      - 3041:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      app:
+        condition: service_healthy
+
+
+
+
+
+
+
+
