--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/your-image-name:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-task:latest
 
       - name: Deploy to Staging
         if: success()
@@ -46,9 +46,7 @@ jobs:
           DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
           SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         run: |
-          sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no $DEPLOY_USER@$DEPLOY_SERVER '
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-task:latest &&
-            docker stop balancee-task || true &&
-            docker rm balancee-task || true &&
-            docker run -d --name balancee-task -p 3000:3000 ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-task:latest
-          '
+          cd balancee-task/
+          git pull origin main 
+          docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-task:latest
+          docker compose up -d 
