--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,4 @@
-# Node modules
-node_modules/
-
-# pnpm lock file
+node_modules
+.next
+out
 pnpm-lock.yaml
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Debug files
-*.local
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Test coverage
-coverage/
-
-# Build files
-build/
-dist/
-
-# Editor and IDE specific files
-.vscode/
-.idea/
-*.sublime-workspace
-
-# Optional npm cache directory
-.npm/
-
-# Optional eslint cache
-.eslintcache
-
-# MacOS-specific files
-*.DS_Store
-
-# Linux-specific files
-*~
