--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "balancee-task",
+  "name": "balancee-devops-submission",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-    "scripts": {
-    "start": "node app.js",
-    "test": "mocha tests/*.test.js --exit"
+  "description": "Jotham Arinze DevOps submission for the Balanceè internship",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "next": "^12.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "chai": "^5.1.1",
-    "mocha": "^10.7.3",
-    "supertest": "^7.0.0"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "typescript": "^5.1.3"
   }
 }
