--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,59 +1,82 @@
-name: CI/CD Pipeline
+name: Main Deployment
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-    - name: Install pnpm
-      run: npm install -g pnpm
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
-    - name: Run tests
-      run: pnpm test
 
-  build-and-push:
-    needs: test
-    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_TOKEN }}
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-        push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-app:latest
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build Next.js application
+        run: pnpm build
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Run tests
+        run: pnpm run test
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-task:latest
 
   deploy:
-    needs: build-and-push
+    needs: test
     runs-on: ubuntu-latest
+
     steps:
-    - name: Install sshpass
-      run: sudo apt-get install sshpass
-    - name: Deploy to staging
-      env:
-        DOCKER_IMAGE: ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-app:latest
-        HOST: ${{ secrets.DEPLOY_HOST }}
-        USER: ${{ secrets.DEPLOY_USER }}
-        PASSWORD: ${{ secrets.SSH_PASSWORD }}
-      run: |
-        sshpass -p $PASSWORD ssh -o StrictHostKeyChecking=no $USER@$HOST '
-          docker pull $DOCKER_IMAGE
-          docker stop balancee-app || true
-          docker rm balancee-app || true
-          docker run -d --name balancee-app -p 3000:3000 $DOCKER_IMAGE
-        '
+      - name: Deploy on server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            cd balancee-task
+            git pull origin main
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/balancee:latest
+            docker compose up -d
