--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -69,6 +69,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check DEPLOY_HOST value
+        run: echo "DEPLOY_HOST is set to: ${{ secrets.DEPLOY_HOST }}"
+
       - name: Deploy on server
         uses: appleboy/ssh-action@master
         with:
@@ -76,7 +79,8 @@ jobs:
           username: ${{ secrets.DEPLOY_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            cd balancee-task
+            echo "Connecting to server ${{ secrets.DEPLOY_HOST }}"
+            cd balancee-task || exit
             git pull origin main
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/balancee:latest
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/balancee-task:latest
             docker compose up -d
